Création de la couche Repository et Service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,5 @@ spring.datasource.username=root
 spring.datasource.password=inesmrad
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
+server.servlet.context-path=/demo1
 server.port=9000
